--- a/Instructor/Solution-Wk15-L02-Hypothesis-Testing.ipynb
+++ b/Instructor/Solution-Wk15-L02-Hypothesis-Testing.ipynb
@@ -2811,9 +2811,7 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "23d4e18d",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3163,9 +3161,7 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "1750373d",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4813,9 +4809,7 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "a79d75fe",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4941,8 +4935,7 @@
    "execution_count": null,
    "id": "b6742886",
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -5043,7 +5036,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.10"
   },
   "toc": {
    "base_numbering": 1,
@@ -5062,6 +5055,13 @@
    },
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
